--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+body {
+  width: 100vw;
+  height: 100vh;
+  font-family: 'Montserrat', 'Helvetica', sans-serif;
+  font-size: 14px;
+  line-height: 1.3;
+  background-color: #fff;
+}
