payment form logic is centralized into a service and finished the form component

--- a/src/app/payment/components/payment-form/payment-form.component.html
+++ b/src/app/payment/components/payment-form/payment-form.component.html
@@ -1,1 +1,46 @@
-<p>payment-form works!</p>
+<div class="card payment">
+  <form
+    [formGroup]="formService.paymentForm"
+    (ngSubmit)="formService.submitForm()">
+    <div class="field grid">
+      <div class="field col-12">
+        <label for="cardName">Card Name</label>
+        <input
+          id="cardName"
+          type="text"
+          pInputText
+          class="w-full"
+          formControlName="cardName" />
+      </div>
+      <div class="field col-12">
+        <label for="cardNumber">Card Number</label>
+        <input
+          id="cardNumber"
+          type="text"
+          pInputText
+          class="w-full"
+          formControlName="cardNumber" />
+      </div>
+      <div class="field col-12 md:col-9">
+        <label for="expDate">Expiration Date</label>
+        <p-calendar
+          id="expDate"
+          formControlName="expirationDate"
+          dateFormat="mm/y"
+          view="month"></p-calendar>
+      </div>
+      <div class="field col-12 md:col-3">
+        <label for="cvv">cvv</label>
+        <input
+          id="cvv"
+          type="text"
+          pInputText
+          class="w-full"
+          formControlName="cvv" />
+      </div>
+      <div class="col-12">
+        <button type="submit" class="w-full" pButton label="Submit"></button>
+      </div>
+    </div>
+  </form>
+</div>
