add payment page

--- a/src/app/payment/components/credit-card/credit-card.component.html
+++ b/src/app/payment/components/credit-card/credit-card.component.html
@@ -25,7 +25,7 @@
         <span class="end-text">exp. end:</span
         ><span class="end-date">11/22</span>
       </div>
-      <div class="card-holder">mr Filip Vitas</div>
+      <div class="card-holder">{{ '' }}</div>
     </div>
     <div class="back">
       <div class="strip-black"></div>
@@ -44,3 +44,5 @@
     </div>
   </div>
 </div>
+
+{{ cardOptions | json }}
