connect with the payment info validation api

--- a/src/app/payment/components/credit-card/credit-card.component.html
+++ b/src/app/payment/components/credit-card/credit-card.component.html
@@ -3,12 +3,7 @@
     <div class="front">
       <div class="strip-bottom"></div>
       <div class="strip-top"></div>
-      <svg class="logo" width="40" height="40" viewbox="0 0 17.5 16.2">
-        <path
-          d="M3.2 0l5.4 5.6L14.3 0l3.2 3v9L13 16.2V7.8l-4.4 4.1L4.5 8v8.2L0 12V3l3.2-3z"
-          fill="white"></path>
-      </svg>
-      <div class="investor">Investor</div>
+      <div class="investor">Credit Card</div>
       <div class="chip">
         <div class="chip-line" *ngFor="let i of [1, 2, 3, 4]"></div>
         <div class="chip-main"></div>
